--- a/client/app/listView/list.html
+++ b/client/app/listView/list.html
@@ -13,8 +13,9 @@
       </ul>
     </div>
     <!-- List of Restaurants.  Uses Angular Mobile UI classes -->
+
     <a ng-repeat="restaurant in data | orderBy:predicate:reverse" ui-sref="restView" ng-click="transferEvent(restaurant.restaurant)" class="list-group-item" ng-show="{{ restaurant.restaurant.open }}">
-      {{ restaurant.restaurant.dist }}mi - {{ restaurant.restaurant.name }} <img class="waitColorDot" ng-src="../../assets/{{restaurant.restaurant.wait}}.png">
+      {{ restaurant.restaurant.dist }}mi - {{ restaurant.restaurant.name }} <img class="waitColorDot" ng-src="../../assets/{{restaurant.restaurant.wait[0].wait}}.png">
       <img class="rightChevron" ng-src="../../assets/rightChevron.png">
     </a>
   </div>
