[Feature] Added timestamp for latest update to wait time

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,8 @@
       <script src="/bower/mobile-angular-ui/dist/js/mobile-angular-ui.min.js"></script>
       <script src="/node/ngmap/build/scripts/ng-map.min.js"></script>
       <script src="/node/angular-loading-bar/build/loading-bar.min.js"></script>
+      <script src="/bower/moment/min/moment.min.js"></script>
+
       
       <!-- Project Source Files -->
       <script src='./app.js'></script>
