--- a/client/app/listView/list.html
+++ b/client/app/listView/list.html
@@ -12,10 +12,12 @@
         <li class="listHeading pull-right" id="waitTitle" ng-click="order('restaurant.wait')">Wait</li>
       </ul>
     </div>
-    <!-- List of Restaurants.  Uses Angular Mobile UI classes -->
 
+    <!-- List of Restaurants.  Uses Angular Mobile UI classes -->
     <a ng-repeat="restaurant in data | orderBy:predicate:reverse" ui-sref="restView" ng-click="transferEvent(restaurant.restaurant)" class="list-group-item" ng-show="{{ restaurant.restaurant.open }}">
-      {{ restaurant.restaurant.dist }}mi - {{ restaurant.restaurant.name }} <img class="waitColorDot" ng-src="../../assets/{{restaurant.restaurant.wait[0].wait}}.png">
+      {{ restaurant.restaurant.dist }}mi - {{ restaurant.restaurant.name }} 
+      <span class="waitTimestamp">Last updated: {{ getTime(restaurant.restaurant.wait) }}</span>
+      <img class="waitColorDot" ng-src="../../assets/{{getLatestWait(restaurant.restaurant.wait)}}.png">
       <img class="rightChevron" ng-src="../../assets/rightChevron.png">
     </a>
   </div>
