[Bugfix] Fixed bug where current wait bar wasnt updating when searching for a restaurant

--- a/client/app/restView/rest.html
+++ b/client/app/restView/rest.html
@@ -34,7 +34,7 @@
             Estimated Wait Time is {{ waitString }}.  Last updated {{ timestamp }}
           </h2>
         </li>
-        <li class="list-group-item"><div id="currWait"></div></li>
+        <li class="list-group-item"><div id="currWait" ng-style="{'background-color': getLatestWaitColor(restaurant.waitArr)}"></div></li>
       </ul>
     </div>
 
